@@ -5,9 +5,20 @@ if [ ! -e "/etc/bloonix/agent/sudoers.d" ] ; then
     chown root:root /etc/bloonix/agent/sudoers.d
     chmod 755 /etc/bloonix/agent/sudoers.d
 fi
-
-if [ ! -e "/etc/bloonix/agent/sudoers.d/check-postfix" ] ; then
-    cp -a /usr/lib/bloonix/etc/sudoers.d/check-postfix /etc/bloonix/agent/sudoers.d/
-    chmod 440 /etc/bloonix/agent/sudoers.d/check-postfix
+if [ ! -e "/etc/bloonix/agent/conf.d" ] ; then
+    mkdir -p /etc/bloonix/agent/conf.d
+    chown root:bloonix /etc/bloonix/agent/conf.d
+    chmod 750 /etc/bloonix/agent/conf.d
 fi
+for f in check-postfix ; do
+    if [ ! -e "/etc/bloonix/agent/sudoers.d/$f" ] ; then
+        cp -a /usr/lib/bloonix/etc/sudoers.d/$f /etc/bloonix/agent/sudoers.d/
+        chmod 440 /etc/bloonix/agent/sudoers.d/$f
+    fi
+    if [ ! -e "/etc/bloonix/agent/conf.d/$f" ] ; then
+        cp -a /usr/lib/bloonix/etc/conf.d/$f.conf /etc/bloonix/agent/conf.d/
+        chmod 640 /etc/bloonix/agent/conf.d/$f.conf
+        chown root:bloonix /etc/bloonix/agent/conf.d/$f.conf
+    fi
+done
 
