@@ -1,3 +1,8 @@
+bloonix-plugins-postfix (0.7) released at 2015-08-14
+
+    * Added a configuration file with use_sudo for each check that
+      to executed via sudo.
+
 bloonix-plugins-postfix (0.6) released at 2014-12-02
 
     * Fixed handling of sudo files.
